THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-v0.7.12.5
 - FIX: added missing .pp source code transforms to Nuget package

PL-v0.7.12.4
 - FIX: added missing Global.asax.cs to Nuget package

PL-v0.7.12.3
 - FIX: resolved issues with pattern state, and added missing states to code view

PL-v0.7.12.2
 - FIX: moved, and deprecated, ~/builder in favour of ~/generate

PL-v0.7.12.1
 - ADD: create default config.ini if missing

PL-v0.7.12.0
 - ADD: brought inline with v0.7.12 of patternlab-php