@@ -3,6 +3,6 @@ using System.Reflection;
 // Shared assembly information
 [assembly: AssemblyProduct("Pattern Lab")]
 [assembly: AssemblyFileVersion("0.7.12")]
-[assembly: AssemblyVersion("0.7.12.5")]
+[assembly: AssemblyVersion("0.7.12.6")]
 [assembly: AssemblyCompanyAttribute("Brad Frost,Dave Olsen,Ben Edwards")]
 [assembly: AssemblyCopyright("Copyright (c) 2013-14 Brad Frost, http://bradfrostweb.com, Dave Olsen, http://dmolsen.com & Ben Edwards, http://benedfit.com")]
