@@ -1,5 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-v0.7.12.6
+ - FIX: pattern parameters now work without styleModifier
+
 PL-v0.7.12.5
  - FIX: added missing .pp source code transforms to Nuget package
 
